# embodied-codex

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  README-ja.md  README.md  autonomous-action.sample.sh  autonomous-action.sh  autonomous-mcp.json.example  codex.sh  mcpBehavior.toml  test-autonomous.sh
.claude/: settings.example.json  settings.json  settings.local.json
.claude/commands/: awake.md  sleep.md
.claude/hooks/: hearing-hook.sh  hearing-stop-hook.sh  interoception.sh  statusline.ts
.codex/: config.toml.example  hooks.json
.codex/hooks/: continuity-daemon.sh  heartbeat-daemon.sh  user-prompt-submit-interoception.sh
benchmarks/latent_loop/: README.md  run_eval.py  synthetic_kg.py
desire-system/: desire_updater.py  pyproject.toml  server.py
docs/: attention-control-model.md  latent-loop.md  recursive-context.md
health-connect-companion/: .gitignore  README.md  settings.gradle.kts
health-connect-companion/app/: build.gradle.kts
health-connect-companion/app/src/main/: AndroidManifest.xml
health-connect-companion/app/src/main/java/ai/lifemate/healthconnectcompanion/: BiometricsSender.kt  CompanionPrefs.kt  HealthConnectRepository.kt  MainActivity.kt  PeriodicSendWorker.kt
hearing/: README.md  pyproject.toml
hearing/docs/: ISSUES.md  architecture.md
hearing/docs/design-notes/: architecture.md  event-driven-hearing.md  field-notes.md  implementation.md  index.md  realtime-stt-migration.md  reference-comparison.md
hearing/src/hearing/: __init__.py  __main__.py  buffer.py  config.py  filters.py  pipeline.py  server.py  transcriber.py  worker.py
hearing/tests/: test_filters.py
installer/: README.md  embodied-codex-installer.spec  pyproject.toml
installer/src/installer/pages/: api_key.py  complete.py  welcome.py
ip-webcam-mcp/: pyproject.toml
ip-webcam-mcp/src/ip_webcam_mcp/: server.py
latent-loop-mcp/: README.md  pyproject.toml
latent-loop-mcp/src/latent_loop_mcp/: __init__.py  _behavior.py  config.py  diagnostics.py  distribution.py  fact_graph.py  halting.py  models.py  server.py  service.py  store.py
latent-loop-mcp/tests/: conftest.py  test_distribution.py  test_fact_graph.py  test_halting.py  test_protocol_contract.py  test_store.py
memory-mcp/: README.md  pyproject.toml
memory-mcp/scripts/: merge_memories.py  migrate_chroma_to_sqlite.py  migrate_embeddings.py
memory-mcp/src/memory_mcp/: config.py  server.py
memory-mcp/tests/: conftest.py  test_delete_update.py
recursive-context-mcp/: README.md  pyproject.toml
recursive-context-mcp/src/recursive_context_mcp/: __init__.py  config.py  context_io.py  models.py  program.py  server.py  service.py  store.py
recursive-context-mcp/tests/: conftest.py  test_buffers.py  test_context_io.py  test_program.py  test_trace.py
room-actuator-mcp/: .env.example  README.md  pyproject.toml
room-actuator-mcp/src/room_actuator_mcp/: __init__.py  _behavior.py  backends.py  config.py  models.py  server.py
room-actuator-mcp/tests/: test_backends.py  test_config.py  test_server.py
scripts/: attention-lib.ts  attention-state.ts  companion-biometrics-ingest.py  continuity-daemon.test.ts  continuity-daemon.ts  fetch-garmin-companion-biometrics.py  sync_mcp_to_codex_config.py  test_companion_biometrics_ingest.py
sociality-mcp/src/sociality_mcp/: server.py
toio-mcp/: README.md  pyproject.toml  run-toio-mcp-http.cmd  run-toio-mcp.cmd
toio-mcp/src/toio_mcp/: __init__.py  controller.py  server.py
toio-mcp/tests/: test_controller.py  test_server.py
toio-world/: README.md  action-profile.json  pyproject.toml
toio-world/configs/: policies.toml  world.toml
toio-world/episodes/calibration-2026-03-28T17-15-33.251852_00-00/: metadata.json  steps.jsonl
toio-world/episodes/square-2026-03-28T15-59-07.898203_00-00/: baseline-next-pose.json  concept-candidates.json  gloss-table.json  macro-candidates.json  metadata.json  rule-candidates.json  steps.jsonl  symbols.jsonl  working-vocabulary.json
toio-world/scripts/: collect_calibration.py  collect_pattern.py  collect_random.py  compile_vocabulary.py  derive_symbols.py  discover_concepts.py  discover_macros.py  eval_next_pose.py  inspect_episode.py  mine_rules.py  profile_actions.py  replay_episode.py  review_protolang.py  train_next_pose.py
toio-world/src/toio_world/: __init__.py  align.py  baseline.py  calibration.py  cli.py  concepts.py  config.py  controller.py  dataset.py  discover.py  gloss.py  induce.py  logger.py  policies.py  protolang.py  replay.py  review.py  schema.py  visualize.py  vocabulary.py
toio-world/tests/: test_baseline.py  test_calibration.py  test_controller.py  test_dataset.py  test_discover.py  test_induce.py  test_logger.py  test_policies.py  test_vocabulary.py
tts-mcp/src/tts_mcp/: go2rtc.py  playback.py  server.py
tts-mcp/src/tts_mcp/engines/: elevenlabs.py
tts-mcp/tests/: test_engines.py
wifi-cam-mcp/src/wifi_cam_mcp/: server.py
wifi-cam-mcp/tests/: test_continuity.py
