[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hearing"
version = "0.1.0"
description = "Always-on listening library for embodied-codex - continuous audio capture and transcription"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "jurigged>=0.6.0",
    "mcp>=1.0.0",
    "setproctitle>=1.3.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
hearing-mcp = "hearing.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hearing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
