[project]
name = "embodied-codex-installer"
version = "0.1.0"
description = "Installer for Embodied Codex - AI with physical senses"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "pyinstaller>=6.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.scripts]
embodied-codex-installer = "installer.main:main"

[tool.uv]
package = true
