[project]
name = "ip-webcam-mcp"
version = "0.1.0"
description = "MCP server for Android IP Webcam app"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "jurigged>=0.6.0",
]

[project.scripts]
ip-webcam-mcp = "ip_webcam_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ip_webcam_mcp"]
