[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toio-world"
version = "0.1.0"
description = "Stable playground for toio world-model experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "toio-py>=1.1.0",
    "typer>=0.12.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
toio-world = "toio_world.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toio_world"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
